Add code cleanup changes